syntax = "proto3";

import "user.proto";
import "device.proto";
import "rental.proto";
import "booking.proto";
import "vehicle.proto";

package review;

service ReviewService {
  // User operations
  rpc CreateReview (CreateReviewRequest) returns (ReviewResponse);
  rpc UpdateReview (UpdateReviewRequest) returns (ReviewResponse);
  rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewResponse);
  rpc GetMyReviews (GetMyReviewsRequest) returns (GetMyReviewsResponse);
  rpc GetReviewById (GetReviewByIdRequest) returns (ReviewResponse);
  
  // Public operations
  rpc GetReviewsByVehicle (GetReviewsByVehicleRequest) returns (GetReviewsResponse);
  rpc GetReviewsByDevice (GetReviewsByDeviceRequest) returns (GetReviewsResponse);
  rpc GetReviewsByCombo (GetReviewsByComboRequest) returns (GetReviewsResponse);
  
  // Admin operations
  rpc GetAllReviews (GetAllReviewsRequest) returns (GetReviewsResponse);
  rpc AdminDeleteReview (AdminDeleteReviewRequest) returns (DeleteReviewResponse);
}

enum ReviewType {
  DEVICE = 0;
  VEHICLE = 1;
  COMBO = 2;
}

enum SortField {
  CREATED_AT = 0;
  UPDATED_AT = 1;
  RATING = 2;
  TITLE = 3;
}

enum SortOrder {
  ASCENDING = 0;
  DESCENDING = 1;
}

// Review entity 
message Review { 
  string id = 1;
  string booking_id = 2;
  string vehicle_id = 3;
  string device_id = 4;
  string combo_id = 5;
  string user_id = 6;

  int32 rating = 7;
  string title = 8;
  ReviewType type = 9;
  string content = 10;
  repeated string images = 11;

  string created_at = 12;
  string updated_at = 13;

  int32 update_count = 14;
  string rental_id = 15;
}

// Review summary (no content/images)
message ReviewSummary { 
  string id = 1;
  string booking_id = 2;
  string vehicle_id = 3;
  string device_id = 4;
  string combo_id = 5;
  string user_id = 6;

  int32 rating = 7;
  string title = 8;
  ReviewType type = 9;

  string created_at = 10;
  string updated_at = 11;

  int32 update_count = 12;
  string rental_id = 13;
}

// Request messages
message CreateReviewRequest {
  optional string booking_id = 1;
  string user_id = 2; 
  optional string rental_id = 3;
  int32 rating = 4;
  string title = 5;
  ReviewType type = 6;
  string content = 7;
  repeated string images = 8;
}

message UpdateReviewRequest {
  string review_id = 1;
  string user_id = 2;
  
  int32 rating = 3;
  string title = 4;
  string content = 5;
  repeated string images = 6;
}

message DeleteReviewRequest {
  string review_id = 1;
  string user_id = 2;
}

message GetReviewByIdRequest {
  string review_id = 1;
}

message GetMyReviewsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
  
  // Query options
  string search_text = 4;
  int32 min_rating = 5;
  int32 max_rating = 6;
  string start_date = 7;  // ISO 8601 format
  string end_date = 8;    // ISO 8601 format
  SortField sort_by = 9;
  SortOrder sort_order = 10;
}

message GetReviewsByVehicleRequest {
  string vehicle_id = 1;
  int32 page = 2;
  int32 limit = 3;
  
  // Query options
  string search_text = 4;
  int32 min_rating = 5;
  int32 max_rating = 6;
  string start_date = 7;
  string end_date = 8;
  SortField sort_by = 9;
  SortOrder sort_order = 10;
}

message GetReviewsByDeviceRequest {
  string device_id = 1;
  int32 page = 2;
  int32 limit = 3;
  
  // Query options
  string search_text = 4;
  int32 min_rating = 5;
  int32 max_rating = 6;
  string start_date = 7;
  string end_date = 8;
  SortField sort_by = 9;
  SortOrder sort_order = 10;
}

message GetReviewsByComboRequest {
  string combo_id = 1;
  int32 page = 2;
  int32 limit = 3;
  
  // Query options
  string search_text = 4;
  int32 min_rating = 5;
  int32 max_rating = 6;
  string start_date = 7;
  string end_date = 8;
  SortField sort_by = 9;
  SortOrder sort_order = 10;
}

message GetAllReviewsRequest {
  string admin_id = 1;
  int32 page = 2;
  int32 limit = 3;
  ReviewType type = 4;
  
  // Query options
  string search_text = 5;
  int32 min_rating = 6;
  int32 max_rating = 7;
  string start_date = 8;
  string end_date = 9;
  SortField sort_by = 10;
  SortOrder sort_order = 11;
}

message AdminDeleteReviewRequest {
  string review_id = 1;
  string admin_id = 2;
}

// Response messages
message ReviewResponse {
  Review review = 1;
  string message = 2;
}

message GetReviewsResponse {
  repeated Review reviews = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_items = 4;
  int32 total_pages = 5;
}

message GetMyReviewsResponse {
  repeated Review reviews = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_items = 4;
  int32 total_pages = 5;
}

message DeleteReviewResponse {
  bool success = 1;
  string message = 2;
}